<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121A21"
    tools:context=".view.LogInFragment">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="626dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/LogInToYourAccount"
            android:textSize="28sp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/white"/>

        <EditText
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/editTextTextEmailAddress"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:background="@drawable/edittext_redondo"
            android:ems="10"
            android:hint="@string/Email"
            android:textColor="@color/white"
            android:paddingStart="16dp"
            android:inputType="textEmailAddress"
            android:textColorHint="#94ADC7"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <EditText
            android:id="@+id/editTextCompany"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/edittext_redondo"
            android:ems="10"
            android:hint="@string/Company"
            android:textColor="@color/white"
            android:inputType="text"
            android:paddingStart="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="#94ADC7" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="358dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#0583ff"
            android:text="@string/Enter"
            android:textColor="#000000"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>